enable java preview features.